--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
               <a href="" class="mobile-menu__link link">Контакты</a>
             </li>
           </ul>
+          <ul>
+            <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+            <li><a href=""></a></li>
+          </ul>
         </div>
       </div>
     </header>
