--- a/index.html
+++ b/index.html
@@ -85,9 +85,37 @@
               <a href="" class="mobile-menu__link link">Контакты</a>
             </li>
           </ul>
-          <ul>
-            <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
-            <li><a href=""></a></li>
+          <ul class="mobile-menu__contact-list list">
+            <li>
+              <a
+                class="mobile-menu__contact-link-tel link"
+                href="tel:+380961111111"
+              >
+                +38 096 111 11 11</a
+              >
+            </li>
+            <li>
+              <a
+                class="mobile-menu__contact-link-mail link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+
+          <ul class="mobile-menu__social-list list">
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="#">Instagram</a>
+            </li>
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="#">Twitter</a>
+            </li>
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="#">Facebook</a>
+            </li>
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="#">LinkedIn</a>
+            </li>
           </ul>
         </div>
       </div>
