--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="navigation">
           <a class="logo-link link" href="index.html">
@@ -119,20 +119,20 @@
           </ul>
         </div>
       </div>
-    </header>
+    </header> -->
     <!-- <main> -->
     <!-- Герой -->
-    <!-- <section class="hero-section">
-        <div class="container">
-          <h1 class="hero-title">
-            Эффективные решения <br />
-            для вашего бизнеса
-          </h1>
-          <button class="modal-btn" type="button" data-modal-open>
-            Заказать услугу
-          </button>
-        </div>
-      </section> -->
+    <section class="hero-section">
+      <div class="container">
+        <h1 class="hero-title">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
+        <button class="modal-btn" type="button" data-modal-open>
+          Заказать услугу
+        </button>
+      </div>
+    </section>
     <!-- Наши преимущества -->
     <!-- <section class="feature section">
       <div class="container">
@@ -751,7 +751,7 @@
       </div>
     </footer> -->
     <!-- Модальное окно -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="close-btn-icon">
@@ -828,8 +828,7 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script> -->
-
+    <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
   </body>
 </html>
