--- a/portfolio.html
+++ b/portfolio.html
@@ -29,18 +29,23 @@
           </a>
           <ul class="site-nav list">
             <li class="site-nav__item">
-              <a href="index.html" class="site-nav__link link">Студия</a>
+              <a href="index.html" class="site-nav__link current link"
+                >Студия</a
+              >
             </li>
             <li class="site-nav__item">
-              <a href="portfolio.html" class="site-nav__link current link"
-                >Портфолио</a
-              >
+              <a href="portfolio.html" class="site-nav__link link">Портфолио</a>
             </li>
             <li class="site-nav__item">
               <a href="" class="site-nav__link link">Контакты</a>
             </li>
           </ul>
         </nav>
+        <button class="header__mobile-menu-btn" type="button" data-menu-button>
+          <svg class="header__mobile-menu-icon">
+            <use href="./images/sprite.svg#mob-menu-icon"></use>
+          </svg>
+        </button>
         <ul class="contact-list list">
           <li class="contact-link-item">
             <a href="mailto:info@devstudio.com" class="contact-link link">
@@ -60,8 +65,61 @@
           </li>
         </ul>
       </div>
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu__container">
+          <button class="mobile-menu__close-btn" type="button" data-menu-close>
+            <svg class="mobile-menu__close-icon">
+              <use href="./images/sprite.svg#icon-close"></use>
+            </svg>
+          </button>
+          <ul class="mobile-menu__nav">
+            <li class="mobile-menu__item list">
+              <a href="index.html" class="mobile-menu__link link">Студия</a>
+            </li>
+            <li class="mobile-menu__item list">
+              <a href="portfolio.html" class="mobile-menu__link link"
+                >Портфолио</a
+              >
+            </li>
+            <li class="mobile-menu__item list">
+              <a href="" class="mobile-menu__link link">Контакты</a>
+            </li>
+          </ul>
+          <ul class="mobile-menu__contact-list list">
+            <li>
+              <a
+                class="mobile-menu__contact-link-tel link"
+                href="tel:+380961111111"
+              >
+                +38 096 111 11 11</a
+              >
+            </li>
+            <li>
+              <a
+                class="mobile-menu__contact-link-mail link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+
+          <ul class="mobile-menu__social-list list">
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="#">Instagram</a>
+            </li>
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="#">Twitter</a>
+            </li>
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="#">Facebook</a>
+            </li>
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="#">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
-    <main>
       <!-- Портфолио -->
       <section class="section">
         <div class="container">
@@ -142,7 +200,7 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="porfolio-list-content">
+                <div class="porfolio-list-content tech">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
                 </div>
@@ -770,5 +828,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
