--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
               <use href="./images/sprite.svg#icon-close"></use>
             </svg>
           </button>
+
+          <div class="mobile-menu__nav-list">
           <ul class="mobile-menu__nav">
             <li class="mobile-menu__item list">
               <a href="index.html" class="mobile-menu__link link">Студия</a>
@@ -85,6 +87,8 @@
               <a href="" class="mobile-menu__link link">Контакты</a>
             </li>
           </ul>
+        </div>
+        <div class="mobile-menu__connect-list">
           <ul class="mobile-menu__contact-list list">
             <li>
               <a
@@ -117,6 +121,7 @@
               <a class="mobile-menu__social-link link" href="#">LinkedIn</a>
             </li>
           </ul>
+        </div>
         </div>
       </div>
     </header>
